@@ -428,34 +428,34 @@ width:16px;
 }
 
 /* style for keyfacts slider */
-
+#keyfacts-slider {
+    position: relative;
+}
 #keyfacts-slider img.keyfacts-bgimg {
-   min-width: 600px;
-   min-height: 348px;
-   width: 100%;
-   position: absolute;
-   bottom: 0;
-   left: 0;
+    min-width: 600px;
+    min-height: 348px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 0;
 }
 
 #keyfacts-slider dl {
-   width: 100%;
-   height: 140px !important;
-   position: relative;
-   top: -160px;
-   left: -2px;
-   opacity: 0.8;
-   margin-bottom: -120px;
+    width: 100%;
+    min-height: 140px;
+    position: relative;
+    opacity: 0.8;
 }
 
 #keyfacts-slider .slidePortlet {
-    position: relative;
+    position: absolute;
     overflow: hidden;
     padding: 0;
     background: &dtml-corporateBlueTwo;;
     color: #FFFFFF;
-    left: 0 !important;
-    top: -153px !important;
+    bottom: 0;
+    margin: 0;
 }
 
 #keyfacts-slider .slidePortlet .portletItem {
