@@ -3,6 +3,8 @@ Changelog
 
 9.7-dev - (unreleased)
 ----------------------
+* Change: cleaned keyfacts-slider css implementation
+  [ichimdav refs #19536]
 * Change: navigation submenu is hidden if there are less than 2 of them since
   the new navigation design doesn't contain then at all.
   [ichimdav refs #19536]
